# learn_power8

./: .gitignore  .gitmodules  CMakeLists.txt  HazardList.cpp  HazardList.h  LICENSE  Makefile  README.md  altivecmm.h  altivecmm_typetable.h  parsum.py  stm.cpp  stm4pwr.cpp  stm4pwr.h  test1.c  test2.cpp
altivecmm/: Vec.h  altivecmm.h  typetable.h
altivecmm/detail/: build_vec.h
cmake/: Toolchain-linux-gnu-powerpc64le.cmake
crypt/: CMakeLists.txt  crc.cpp  powersha.h  quadsha256.cpp  sha256.cpp  shaperf.c
htm/: CMakeLists.txt  htm.cpp  htm4pwr.cpp  htm4pwr.h  tlelock.cpp  tlelock.h
parsum_sse/: Makefile  main.cpp  sumBlock256.h  uint128_t.h
stm/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  stm.cpp  stm4pwr.h
vmx/: CMakeLists.txt  condition_test.cpp  instruction_test.cpp  parsum.cpp  test1.c  test2.cpp  wrapper_inheritence.cpp
